--- a/index.html
+++ b/index.html
@@ -1,103 +1,121 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andrii Gudz / Андрей Гудзь</title>
+    <link rel="stylesheet" href="\homework_02\style.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Как выпивают животные</title>
 </head>
 
-<body style="max-width: 900px; margin: 0 auto;">
+<body>
     <header>
-        <div>
-            <h1 style="color: #246196;">Gudz Andrii</h1>
-            <ul style="list-style-type: none; padding: 0;">
-                <li style="display: inline; margin-right: 10px;">Marktplatz 15, Baunach 96148,</li>
-                <li style="display: inline; margin-right: 10px;">+4915156548401</li>
-                <li style="display: inline;">andrey.gudz@gmail.com</li>
-            </ul>
-        </div>
-        <div align="right"><img width="200" src="homework_01/img/myFoto.jpg" alt="Andrii Gudz" title="Andrii Gudz"></div>
+
     </header>
     <main>
         <div>
-            <h2 style="color: #428BCA;">Arbeitserfahrung</h2>
-            <section>
-                <article>
-                    <p><b>IT, CRM-ERP Berater</b></p>
-                    <p><b>2018 - 2022</b></p>
-                    <p>Selbstständig, Unternehmer, Kyiv, Ukraine</p>
-                </article>
-                <article>
-                    <p>Beratungen zur Arbeit mit dem CRM/ERP-System Odoo, Unterstützung bei der Implementierung von
-                        Software, Schulungen zur Arbeit mit dem System.<br />
-                        <br />
-                        Beratungen zur Entwicklung von Internetseiten.
-                    </p>
-                </article>
-            </section>
-            <section>
-                <article>
-                    <p><b>Technologe-Käser</b></p>
-                    <p><b>2016 - 2018</b></p>
-                    <p>Selbstständig, Unternehmer, Volovets, Ukraine</p>
-                </article>
-                <article>
-                    <p>Entwicklung von technologischen Karten, Herstellung und Veredelung von Käse.</p>
-                </article>
-            </section>
-            <section>
-                <article>
-                    <p><b>Berater für Internetmarketing</b></p>
-                    <p><b>2014 - 2016</b></p>
-                    <p>Selbstständig, Unternehmer, Kyiv, Ukraine</p>
-                </article>
-                <article>
-                    <p>Beratung zur Bereitstellung von integriertem Internet-Marketing, Planung und Betreuung werbender
-                        Unternehmen im Internet. Grundlegende und erweiterte Analytik von werbetreibenden Unternehmen,
-                        Beratung.</p>
-                </article>
-            </section>
+            <h2 class="headline">Как выпивают животные</h2>
+            <div class="subheader">Исследования биологов, доказывающие, что животные могут быть алкоголиками</div>
+            <a href="https://www.gazeta.ru/gazeta/authors/ekaterina_shutova.shtml">Екатерина Шутова</a>
+            <img id="panda" src="homework_02\panda.png" alt="panda picture">
+            <p class="intro">
+                Шимпанзе не только не упускают возможности побаловаться алкоголем, но и самостоятельно изготавливают
+                спиртные напитки, утверждают ученые. О том, какие еще животные достигают состояния опьянения, а также
+                каким
+                образом они это делают, рассказывает отдел науки «Газеты.Ru».
+            </p>
+            <hr>
         </div>
-        <div>
-            <h2 style="color: #428BCA;">Ausbildung</h2>
-            <section>
-                <article>
-                    <p><b>Nationale Universität für Bauwesen und Architektur Kyiv</b></p>
-                    <p><b>1997 - 2006</b></p>
-                </article>
-                <article>
-                    <p>Automatisiertes Management von technologischen Prozessen und Produktion</p>
-                </article>
-            </section>
-        </div>
-        <div>
-            <h2 style="color: #428BCA;">Fähigkeiten</h2>
-            <section>
-                <article>
-                    <ul>
-                        <li>CRM/ERP</li>
-                        <li>Project managment</li>
-                        <li>Google Analytics</li>
-                        <li>Google Adwords</li>
-                        <li>SMM</li>
-                        <li>E-commerce</li>
-                        <li>Sales</li>
-                        <li>CMS Magento, WordPress, Joomla, Drupal, Odoo</li>
-                    </ul>
-                </article>
-            </section>
-        </div>
+        <p class="main-text">
+            Международная группа ученых выяснила, что среди обезьян, как и среди людей, встречаются любители выпить: в
+            качестве алкогольного напитка приматы употребляют забродивший пальмовый сок. С текстом исследования,
+            проводившегося в городе Боссу (Гвинея) с 1995 по 2012 год, можно ознакомиться в журнале Royal Society Open
+            Science.
+        </p>
+        <p class="main-text text-more">
+            Местные жители Гвинеи используют сок пальмы рафия в качестве основы для производства вина. Живущие
+            неподалеку
+            шимпанзе тоже не упускают возможности полакомиться алкоголем: приматы срывают листья рафии с деревьев и
+            многократно их пережевывают, превращая в вязкую массу. Затем шимпанзе помещают получившуюся массу в сосуды,
+            которые местные жители вешают на пальмах для сбора сока. Когда он пропитывает кашицу из листьев, обезьяны
+            забирают ее и наслаждаются напитком.
+        </p>
+        <p class="idea">
+            Специалисты провели измерения и выяснили, что получающийся у обезьян напиток содержит от 3,1 до 6,9%
+            алкоголя,
+            то есть столько же, сколько темное пиво.
+        </p>
+        <p class="main-text">
+            «Мы выяснили, что шимпанзе, живущие в Гвинее, пользуются своими навыками по изготовлению орудий труда, чтобы
+            пить
+            пальмовое вино, — рассказывает ведущий автор исследования Кимберли Джейн Хокингс из Университета Брукса в
+            Оксфорде.
+            — Это в очередной раз говорит об интеллекте наших ближайших родственников».
+        </p>
+        <p class="main-text">
+            Ученые утверждают, что самцы шимпанзе балуются алкоголем чаще, чем самки. На приматов, как и на людей,
+            крепкий
+            напиток действует по-разному: одни обезьяны сразу ложатся спать, другие начинают активно скакать по
+            деревьям.
+        </p>
+        <p class="main-text">
+            Авторы исследования пока точно не знают, для чего шимпанзе употребляют забродивший пальмовый сок. Скорее
+            всего, обезьяны, как и люди, обладают генами, отвечающими за желание достичь алкогольного опьянения. По
+            мнению ученых, способность усваивать этиловый спирт — основной действующий компонент алкогольных напитков —
+            появилась у общего предка обезьяны и человека еще 10 млн лет назад. Это было важным эволюционным шагом, так
+            как в те времена основным источником питания являлись фрукты, в которых количество этилового спирта
+            увеличивалось по мере созревания. Американский биолог Роберт Дадли даже выдвинул так называемую
+        </p>
+        <p class="main-text">
+            <span class="idea">
+                «гипотезу пьяной обезьяны»: согласно этой теории, люди испытывают слабость к алкоголю именно потому, что
+                наши предки ассоциировали спелые плоды с приятным состоянием легкого опьянения.
+            </span>
+        </p>
+        <p class="main-text">
+            Впрочем, наряду с шимпанзе пристрастием к вредным привычкам отличаются и другие животные. Так, британские
+            исследователи выяснили, что некоторые дельфины могут «ловить кайф» от тетродотоксина — яда рыбы фугу. В 1995
+            году зоолог Лиза Стайнер впервые описала, как под воздействием тетродотоксина водные млекопитающие достигают
+            состояния легкого опьянения. Впрочем, ученые еще не уверены в том, что дельфины специально подвергают себя
+            воздействию яда рыбы фугу. Вполне возможно, что они становятся жертвами ядовитого вещества в результате
+            случайности. Посмотреть документальный фильм, демонстрирующий дельфинов «под кайфом», можно на сайте BBC.
+        </p>
+        <p class="main-text">
+            <span class="idea">
+                Специалисты провели измерения и выяснили, что получающийся у обезьян напиток содержит от 3,1 до 6,9%
+                алкоголя, то есть столько же, сколько темное пиво.
+
+            </span>
+        </p>
+
+        <p class="main-text">
+            Согласно наблюдениям ученых, любителями выпить являются даже пчелы: насекомые употребляют забродивший
+            нектар. Во время одного из экспериментов ученые предложили пчелам выбор между сахарным раствором и напиток с
+            80-процентным содержанием алкоголя. Пчелы, не задумываясь, выбрали второе лакомство. Австралийский энтомолог
+            Эррол Хасан утверждает, что
+        </p>
+        <p class="main-text">
+            <span class="idea">
+                в состоянии опьянения пчелы иногда забывают дорогу в родной улей и «полностью теряют ответственность за
+                свои поступки». Более того, захмелевшие насекомые могут столкнуться со следующей проблемой: сородичи не
+                пускают их в нетрезвом виде в улей.
+            </span>
+        </p>
+        <p class="main-text">
+            Ходят «под мухой» и землеройки: по ночам эти маленькие зверьки, внешне похожие на мышей, залезают на пальмы
+            и пьют из цветков забродивший нектар, причем делают это практически ежедневно. Самое удивительное
+            заключается в том, что при этом землеройки практически не пьянеют: по мнению ученых, за 55 млн лет эволюции
+            организм животных выработал устойчивость к алкоголю. По словам Франка Винса, ведущего автора исследования,
+            опубликованного в журнале PNAS, землеройки употребляют алкоголь в таких пропорциях к массе собственного
+            тела, что в случае с человеком это привело бы к серьезным последствиям для здоровья или даже к летальному
+            исходу.
+        </p>
     </main>
+
+
     <footer>
-        <hr style="border: 2px solid #246196;">
-        <div align="left" style="margin-left: 5px;">
-            <a href="#">&copy; 2024 Andrii Gudz</a>
-        </div>
-        <div align="right">
-            <a target="_blank" href="https://www.linkedin.com/in/andrey-gudz-58274919/"><img width="40" src="homework_01/img/icon _round-in.png" alt="LinkedIn"></a>
-            <a target="_blank" href="https://www.facebook.com/andri.gudz"><img width="40" src="homework_01/img/icon _round-facebook.png" alt="Facebook"></a>
-        </div>
+        <div class="footer-element">На «Яндекс Маркете» появились новые товары из IKEA</div>
     </footer>
 </body>
 
