--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="\homework_02\style.css">
+    <link rel="stylesheet" href="homework_02\style.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Как выпивают животные</title>
 </head>
