--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="button background-box">
-    <a href="homework_02\index.html">Homework 2</a>
-</div>
+        <a href="homework_02\index.html">Homework 2</a>
+    </div>
+    <div class="button background-box">
+        <a href="homework_03\task_1\index.html">Homework 3 - 1</a>
+    </div>
+    <div class="button background-box">
+        <a href="homework_03\task_2\index.html">Homework 3 - 2</a>
+    </div>
 </body>
+
 </html>
