--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <div class="button background-box">
         <a href="homework_03\task_2\index.html">Homework 3 - 2</a>
     </div>
+    <div class="button background-box">
+        <a href="lesson_04\onlineKino\index.html">Homework 6</a>
+    </div>
 </body>
 
 </html>
