--- a/lesson_04/onlineKino/index.html
+++ b/lesson_04/onlineKino/index.html
@@ -73,7 +73,7 @@
                 <img src="img/movie2.webp" alt="">
             </div>
         </section>
-        <h3 class="title">Neue Filme</h3>
+        <h3 class="title">Beliebt auf Netflix</h3>
         <section class="content">
             <div class="promo-video">
                 <img src="img/filme1.webp" alt="">
@@ -108,7 +108,41 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Netflix. All rights reserved.</p>
+        <div class="social">
+            <div class="whiteImg"><img src="img/facebook-ico.svg" alt="Facebook"></div>
+            <div class="whiteImg"><img src="img/instagram-ico.svg" alt="Instagram"></div>
+            <div class="whiteImg"><img src="img/twiter-ico.svg" alt="Twiter"></div>
+            <div class="whiteImg"><img src="img/youtube-ico.svg" alt="Youtube"></div>
+        </div>
+        <div class="footerMenu">
+            <div>
+                <span class="footerContent"><a href="#">Audiodeskription</a></span>
+                <span class="footerContent"><a href="#">Anlegerbeziehungen</a></span>
+                <span class="footerContent"><a href="#">Datenschutz</a></span>
+                <span class="footerContent"><a href="#">Kontakt</a></span>
+            </div>
+            <div>
+                <span class="footerContent"><a href="#">Hilfe-Center</a></span>
+                <span class="footerContent"><a href="#">Karriere</a></span>
+                <span class="footerContent"><a href="#">Rechtliche Hinweise</a></span>
+                <span class="footerContent"><a href="#">Wahlmöglichkeiten für Werbung</a></span>
+            </div>
+            <div>
+                <span class="footerContent"><a href="#">Geschenkkarten</a></span>
+                <span class="footerContent"><a href="#">Netflix Shop</a></span>
+                <span class="footerContent"><a href="#">Cookie-Einstellungen</a></span>
+                <span class="footerContent"></span>
+            </div>
+            <div>
+                <span class="footerContent"><a href="#">Medien-Center</a></span>
+                <span class="footerContent"><a href="#">Nutzungsbedingungen</a></span>
+                <span class="footerContent"><a href="#">Impressum</a></span>
+                <span class="footerContent"></span>
+            </div>
+        </div>
+        <div class="copy">
+            <p>&copy; 2024 Netflix. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 
