Homework 7 and independent work

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <div class="button background-box">
         <a href="lesson_04\onlineKino\index.html">Homework 6</a>
     </div>
+    <div class="button background-box">
+        <a href="lesson_07\index.html">Homework 7</a>
+    </div>
+    <div class="button background-box">
+        <a href="lesson_08\index.html">Independent Work</a>
+    </div>
 </body>
 
 </html>
