Lesson und Homework 11

--- a/lesson_08/index.html
+++ b/lesson_08/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styleMain.css">
     <link rel="stylesheet" href="styleFooter.css">
+    <script defer src="script.js"></script>
     <title>Berlin project</title>
 </head>
 
@@ -101,7 +102,7 @@
                 </div>
             </section>
             <!-- Teile 2 -->
-            
+
             <!-- Teil 3 -->
         </div>
 
