--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <div class="button background-box">
         <a href="lesson_08\index.html">Independent Work</a>
     </div>
+    <div class="button background-box">
+        <a href="homework_20\index.html">Homework 20</a>
+    </div>
 </body>
 
 </html>
