--- a/lesson_21/nameGender/index.html
+++ b/lesson_21/nameGender/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="scrypt.js"></script>
     <title>Get gender of name</title>
-</head>
-<body>
+  </head>
+  <body>
     <form action="" id="genderForm">
-        <input type="text" name="nickname" required placeholder="type nickname...">
-        <button type="submit">Analyze gender!</button>
+      <input
+        type="text"
+        name="nickname"
+        required
+        placeholder="type nickname..."
+      />
+      <button type="submit">Analyze gender!</button>
     </form>
     <p id="answer"></p>
-</body>
+  </body>
 </html>
