--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <div class="button background-box">
         <a href="homework_20\index.html">Homework 20</a>
     </div>
+    <div class="button background-box">
+        <a href="lesson_24\index.html">Lesson 24 / Independent Work</a>
+    </div>
 </body>
 
 </html>
